@@ -1,11 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.balanceandtorque.intro;
 
-import java.awt.geom.Point2D;
-
+import edu.colorado.phet.balanceandtorque.intro.model.IntroModel;
 import edu.colorado.phet.balanceandtorque.intro.view.IntroCanvas;
-import edu.colorado.phet.balanceandtorque.teetertotter.model.BalancingActModel;
-import edu.colorado.phet.balanceandtorque.teetertotter.model.masses.BrickStack;
 import edu.colorado.phet.common.phetcommon.application.Module;
 
 /**
@@ -15,15 +12,15 @@ import edu.colorado.phet.common.phetcommon.application.Module;
  */
 public class IntroModule extends Module {
 
-    BalancingActModel model;
+    IntroModel model;
 
     public IntroModule() {
-        this( new BalancingActModel() );
+        this( new IntroModel() );
         setClockControlPanel( null );
         getModulePanel().setLogoPanel( null );
     }
 
-    private IntroModule( BalancingActModel model ) {
+    private IntroModule( IntroModel model ) {
         // TODO: i18n
         super( "Intro", model.getClock() );
         this.model = model;
@@ -33,9 +30,5 @@ public class IntroModule extends Module {
 
     @Override public void reset() {
         model.reset();
-        // TODO: Temp for prototyping - Add some initial objects to the model.
-        model.addMass( new BrickStack( 1, new Point2D.Double( 2.5, 0 ) ) );
-        model.addMass( new BrickStack( 1, new Point2D.Double( 2.8, 0 ) ) );
-        model.addMass( new BrickStack( 2, new Point2D.Double( 3.1, 0 ) ) );
     }
 }
